[package]
name = "dyndns"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.3"
tokio = { version = "0.2.13", features = ["full"] }
hyper-tls = "0.4.1"
serde_json = "1.0.48"
async-std = "1.5.0"
futures = "0.3.4"
