[package]
name = "dyndns"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.3"
tokio = { version = "0.2.13", features = ["full"] }
serde_json = "1.0.48"
async-std = "1.5.0"
futures = "0.3.4"
hyper-alpn = "0.2.1"
bytes = "0.5.4"
http = "0.2.0"

[dependencies.serde]
version = "1.0.104"
default-features = false
features = ["derive"]
